objects/Bug_Team__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bug_Team_Unique__c</fullName>
        <label>Bug Team Unique</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bug_Update_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receive Bug Update Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Bug</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipLabel>Bug Teams</relationshipLabel>
        <relationshipName>Bug_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Chatter_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receive Chatter Comment Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailConfig__c</fullName>
        <formula>&quot;Bug Update Only : &quot; + IF( Bug_Update_Only__c , &quot;True&quot;, &quot;False&quot;) + &quot; and &quot; + 
&quot;Chatter Only : &quot; + IF(  Chatter_Only__c , &quot;True&quot;, &quot;False&quot;)</formula>
        <label>EmailConfig</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bug_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bug Team</label>
    <nameField>
        <displayFormat>BTM-{0000000000}</displayFormat>
        <label>Bug Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bug Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>